// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Filter Components > FilterHeader > applies custom className 1`] = `
<h2
  class="text-2xl font-light text-muted-foreground custom-header"
  data-testid="heading-2"
>
  Test Filter
</h2>
`;

exports[`Filter Components > FilterHeader > renders with title 1`] = `
<h2
  class="text-2xl font-light text-muted-foreground"
  data-testid="heading-2"
>
  Test Filter
</h2>
`;

exports[`Filter Components > FilterItem > applies custom className 1`] = `
<button
  aria-pressed="false"
  class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1 custom-item"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  type="button"
>
  <span>
    Test Item
  </span>
</button>
`;

exports[`Filter Components > FilterItem > renders as selected 1`] = `
<button
  aria-pressed="true"
  class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-foreground m-0 h-full px-0 py-1"
  data-selected="true"
  data-slot="filter-item"
  data-testid="filter-item"
  type="button"
>
  <span>
    Selected Item
  </span>
</button>
`;

exports[`Filter Components > FilterItem > renders as unselected 1`] = `
<button
  aria-pressed="false"
  class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  type="button"
>
  <span>
    Unselected Item
  </span>
</button>
`;

exports[`Filter Components > FilterItem > renders with default props 1`] = `
<button
  aria-pressed="false"
  class="flex cursor-pointer gap-2 text-base font-medium transition-colors border-0 bg-transparent p-0 text-left items-center justify-normal text-muted-foreground hover:text-foreground/80 m-0 h-full px-0 py-1"
  data-selected="false"
  data-slot="filter-item"
  data-testid="filter-item"
  type="button"
>
  <span>
    Test Item
  </span>
</button>
`;

exports[`Filter Components > FilterItemIcon > applies custom className 1`] = `
<svg
  class="h-5 w-5 custom-icon"
  data-testid="mock-icon"
/>
`;

exports[`Filter Components > FilterItemIcon > renders with icon 1`] = `
<svg
  class="h-5 w-5"
  data-testid="mock-icon"
/>
`;

exports[`Filter Components > FilterItemLabel > applies custom className 1`] = `
<span
  class="custom-label"
>
  Test Label
</span>
`;

exports[`Filter Components > FilterList > applies custom className 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-2 custom-list"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <div>
    Item 1
  </div>
</div>
`;

exports[`Filter Components > FilterList > renders with default props 1`] = `
<div
  class="mx-auto w-full flex-col flex gap-2"
  data-slot="filter-list"
  data-testid="filter-list"
>
  <div>
    Item 1
  </div>
  <div>
    Item 2
  </div>
</div>
`;

exports[`Filter Components > FilterRoot > applies custom className 1`] = `
<div
  class="w-full flex-col flex m-0 gap-2 bg-background p-0 custom-class"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div>
    Test content
  </div>
</div>
`;

exports[`Filter Components > FilterRoot > renders with default props 1`] = `
<div
  class="w-full flex-col flex m-0 gap-2 bg-background p-0"
  data-slot="filter-root"
  data-testid="filter-root"
>
  <div>
    Test content
  </div>
</div>
`;
